<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.auth.register.RegisterFragment">

    <include
        android:id="@+id/viewHeader"
        layout="@layout/view_header_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/formView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/back_to_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_user"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText="Requerido"
                app:helperTextTextColor="@color/primary"
                app:layout_constraintBottom_toTopOf="@id/til_register_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_name"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name_user"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_email"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/register_email"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText="Requerido"
                app:helperTextTextColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_register_user"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/primary">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_email"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_Password"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/register_password"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText="Requerido"
                app:helperTextTextColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_register_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/primary">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_Password"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_repeat_Password"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/repeat_password"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText="Requerido"
                app:helperTextTextColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_register_Password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/primary">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_repeat_Password"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/back_to_login"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:text="@string/go_to_login"
                android:textColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register_layout" />

            <RelativeLayout
                android:id="@+id/btn_register_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintEnd_toEndOf="@id/til_register_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/til_register_email"
                app:layout_constraintTop_toBottomOf="@id/til_repeat_Password">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create_user"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_create_user"
                    android:textColor="@color/stylebtn"
                    app:cornerRadius="30dp"
                    app:strokeColor="@color/stylebtn" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/stylebtn"
                    android:visibility="invisible" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

